# labeldrop

./: .gitignore  README.md  pyproject.toml
docs/: QUICKSTART.md  SYSTEMD.md
src/labeldrop/: __init__.py  app.py
src/labeldrop/static/: style.css
src/labeldrop/templates/: index.html
systemd/: labeldrop.service
tests/: test_app.py
